--- a/src/components/topSection/topSection.css
+++ b/src/components/topSection/topSection.css
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap");
 .topsection-main-wrapper {
   width: 100%;
+  min-height: 90vh;
 }
 
 .topsection-inner-wrapper {
