--- a/src/components/footer/style.css
+++ b/src/components/footer/style.css
@@ -3,5 +3,5 @@ footer {
   padding: 10px;
   color: #dfe652;
   text-align: center;
-  font-family: "Quicksand", "sans-serif";
+  font-family: "Baumans", cursive;
 }
